{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 106,
  "lineage": "43b8c445-cbae-5d2d-a71c-5a6a6b2b2af8",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/665ad6c5-9e1e-4de9-9640-3b598284d27e/resourceGroups/terraform-rg/providers/Microsoft.Network/networkInterfaces/terraform-nic",
            "internal_domain_name_suffix": "bwtxh4ega1jehnebgfumwsjvna.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/665ad6c5-9e1e-4de9-9640-3b598284d27e/resourceGroups/terraform-rg/providers/Microsoft.Network/publicIPAddresses/terraform-pub-ip",
                "subnet_id": "/subscriptions/665ad6c5-9e1e-4de9-9640-3b598284d27e/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet/subnets/terraform-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "name": "terraform-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "terraform-rg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/665ad6c5-9e1e-4de9-9640-3b598284d27e/resourceGroups/terraform-rg/providers/Microsoft.Network/networkSecurityGroups/terraform-nsg",
            "location": "centralindia",
            "name": "terraform-nsg",
            "resource_group_name": "terraform-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/665ad6c5-9e1e-4de9-9640-3b598284d27e/resourceGroups/terraform-rg/providers/Microsoft.Network/networkSecurityGroups/terraform-nsg/securityRules/Allow-http",
            "name": "Allow-http",
            "network_security_group_name": "terraform-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "terraform-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/665ad6c5-9e1e-4de9-9640-3b598284d27e/resourceGroups/terraform-rg/providers/Microsoft.Network/networkSecurityGroups/terraform-nsg/securityRules/Allow-https",
            "name": "Allow-https",
            "network_security_group_name": "terraform-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "terraform-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/665ad6c5-9e1e-4de9-9640-3b598284d27e/resourceGroups/terraform-rg/providers/Microsoft.Network/networkSecurityGroups/terraform-nsg/securityRules/Allow-SSH",
            "name": "Allow-SSH",
            "network_security_group_name": "terraform-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "terraform-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/665ad6c5-9e1e-4de9-9640-3b598284d27e/resourceGroups/terraform-rg/providers/Microsoft.Network/publicIPAddresses/terraform-pub-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.213.178.119",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "terraform-pub-ip",
            "resource_group_name": "terraform-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/665ad6c5-9e1e-4de9-9640-3b598284d27e/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet/subnets/terraform-subnet",
            "name": "terraform-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "terraform-rg",
            "virtual_network_name": "terraform-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/665ad6c5-9e1e-4de9-9640-3b598284d27e/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet/subnets/terraform-subnet",
            "network_security_group_id": "/subscriptions/665ad6c5-9e1e-4de9-9640-3b598284d27e/resourceGroups/terraform-rg/providers/Microsoft.Network/networkSecurityGroups/terraform-nsg",
            "subnet_id": "/subscriptions/665ad6c5-9e1e-4de9-9640-3b598284d27e/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet/subnets/terraform-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f873a70d-0686-43d2-b481-3168cb493568",
            "id": "/subscriptions/665ad6c5-9e1e-4de9-9640-3b598284d27e/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet",
            "location": "centralindia",
            "name": "terraform-vnet",
            "resource_group_name": "terraform-rg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}